--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "json-server -w db.json -p 4300 -d 1750",
+    "dev:mock": "concurrently \"npm run dev\" \"npm run mock\""
   },
   "dependencies": {
     "next": "12.0.7",
@@ -13,7 +15,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "concurrently": "^6.4.0",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "json-server": "^0.17.0"
   }
 }
