--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "mock": "json-server -w db.json -p 4300 -d 1750",
+    "mock": "json-server -w db.json -p 4300 -d 500",
     "dev:mock": "concurrently \"npm run dev\" \"npm run mock\""
   },
   "dependencies": {
     "next": "12.0.7",
+    "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
